frontend/k3s/2.mesto-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mesto-frontend-service
  namespace: kybikn
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  type: ClusterIP
  clusterIP: None
  selector:
    app: mesto-frontend-app
