frontend/k3s/3.mesto-frontend-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mesto-frontend-ingress
  namespace: kybikn
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - secretName: mesto-kybikn-ru-tls
      hosts:
        - mesto.kybikn.ru
  rules:
    - host: mesto.kybikn.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mesto-frontend-service
                port:
                  number: 80
  ingressClassName: nginx
